Correcting spacing code for Form, Containers.

--- a/css/styles.css
+++ b/css/styles.css
@@ -555,7 +555,7 @@ Contact with Cupcake styles
 	background:#F9F9F9;
 	padding:25px;
 	margin:50px 0;
-    display: block;
+    display: inline-block;
 }
 
 .hm {
